--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #fafafa;
+    background-color: #ded8d8;
     font-family: 'Times New Roman', Times, serif;
 }
 
